# cpm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml
cmake/: install_prefix.hpp.in  system_path_entry_env.xml  version.h.in
data/: package_locations.json
doc/: conclusion.tex  introduction.tex  main.tex  references.bib  titlepage.tex
doc/chapter1/: chapter1.tex
doc/chapter2/: chapter2.tex
doc/chapter3/: chapter3.tex
doc/chapter4/: chapter4.tex
doc/chapters/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  conclusion.tex  introduction.tex
lib/sqlite3/: CMakeLists.txt
src/: config.cpp  config.hpp  main.cpp  package.cpp  package.hpp  paths.cpp  paths.hpp  repository.hpp  semver.cpp  semver.hpp  util.cpp  util.hpp
src/cli/: colors.hpp  parser.cpp  parser.h  parser.hpp  progress_bar.cpp  progress_bar.hpp
src/commands/: command.cpp  command.hpp  create.cpp  create.hpp  install.cpp  install.hpp  list.cpp  list.hpp  remove.cpp  remove.hpp  sync.cpp  sync.hpp
src/db/: db.cpp  db.hpp  package_db.cpp  package_db.hpp
src/dep-man/: lockfile.cpp  lockfile.hpp
src/logger/: logger.cpp  logger.hpp
src/script/: cpm_pack.cpp  cpm_pack.hpp  package_config.cpp  package_config.hpp
test/: CMakeLists.txt  test_lockfile.cpp  test_package_config.cpp  test_semver.cpp  test_split_string.cpp  test_util.cpp
